# gui-mcp

./: Cargo.toml  README.md  build.rs
.claude/: settings.local.json
doc/: mcp_setup.md  project.md
man/: MANIFEST.json  MANIFEST.md  src_adapter_app_adp_burst_adp.rs.json  src_adapter_app_adp_burst_adp.rs.md  src_adapter_app_adp_click_adp.rs.json  src_adapter_app_adp_click_adp.rs.md  src_adapter_app_adp_clipboard_adp.rs.json  src_adapter_app_adp_clipboard_adp.rs.md  src_adapter_app_adp_crop_adp.rs.json  src_adapter_app_adp_crop_adp.rs.md  src_adapter_app_adp_find_adp.rs.json  src_adapter_app_adp_find_adp.rs.md  src_adapter_app_adp_focus_adp.rs.json  src_adapter_app_adp_focus_adp.rs.md  src_adapter_app_adp_helpers_adp.rs.json  src_adapter_app_adp_helpers_adp.rs.md  src_adapter_app_adp_info_adp.rs.json  src_adapter_app_adp_info_adp.rs.md  src_adapter_app_adp_screenshot_adp.rs.json  src_adapter_app_adp_screenshot_adp.rs.md  src_adapter_mod.rs.json  src_adapter_mod.rs.md  src_core_crop_core.rs.json  src_core_crop_core.rs.md  src_core_mod.rs.json  src_core_mod.rs.md  src_core_vision_core.rs.json  src_core_vision_core.rs.md  src_lib.rs.json  src_lib.rs.md  src_pal_input_pal_child_pal.rs.json  src_pal_input_pal_child_pal.rs.md  src_pal_input_pal_click_pal.rs.json  src_pal_input_pal_click_pal.rs.md  src_pal_input_pal_clipboard_pal.rs.json  src_pal_input_pal_clipboard_pal.rs.md  src_pal_input_pal_mod.rs.json  src_pal_input_pal_mod.rs.md  src_pal_input_pal_vk_pal.rs.json  src_pal_input_pal_vk_pal.rs.md  (+26 more)
proj/: FIXES  INSTALL  ISSUES  PHASES  PROJECT  README.md  RULES  TODO  rulestools.toml
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/core/: crop_core.rs  mod.rs  vision_core.rs
src/pal/: input_pal.rs  mod.rs
src/shared/: errors_x.rs  mod.rs
src/state/: mod.rs  (+3 more)
tests/: gui_notepad.rs  negative.rs  smoke.rs
(+23 files in other folders)
