[package]
name = "slint-gui-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
imageproc = "0.25"
enigo = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
] }

[dev-dependencies]
base64 = "0.22"
image  = "0.25"
rmcp   = { version = "0.1", features = ["client", "transport-io"] }
tokio  = { version = "1", features = ["full"] }

[build-dependencies]
rustdocumenter = { git = "https://github.com/lpmwfx/RustDocumenter" }
rustscanners   = { git = "https://github.com/lpmwfx/RustScanners" }
